Formulario de contacto, eliminación de archivos y lineas innecesarias
Formspree.io para el formulario, borrar archivos php, orden de código y arreglo de margenes en diseño.

--- a/portfolio-details/portfolio-quotes-details.html
+++ b/portfolio-details/portfolio-quotes-details.html
@@ -110,13 +110,13 @@
                 <li><strong>Tecnologias</strong>: ReactJS, Consumo de API.</li>
                 <li><strong>Fecha</strong>: 21 de Enero, 2021</li>
                 <li><strong>Demostración en vivo</strong>: <a target="_blank" href="https://quotes-app-blond.vercel.app/">https://quotes-app-blond.vercel.app/</a></li>
-                <li><strong>Repositorio de GitHub</strong>: <a href="https://github.com/gianbr/Quotes-App">https://github.com/gianbr/Quotes-App</a></li>
+                <li><strong>Repositorio de GitHub</strong>: <a target="_blank" href="https://github.com/gianbr/Quotes-App">https://github.com/gianbr/Quotes-App</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>¿Qué es y para qué sirve este proyecto?</h2>
               <p>
-                Es una aplicación que muestra citas famosas y/o motivacionales y las cambia cada vez que se hace click sobre el botón.
+                Es una aplicación que muestra citas famosas y motivacionales y las cambia cada vez que se hace click sobre el botón.
                 Para hacerla se utilizó ReactJS y se consumió una API pública, razón por la cual las frases se encuentran en inglés y por la misma razón
                 la aplicación está hecha en ese idioma.
               </p>
