--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Gianluca Brunner</h1>
       <p>Soy desarrollador FrontEnd</span></p>
-      <p>Y <span class="typed" data-typed-items="utilizo día a día JavaScript, también uso React, empleo diariamente Angular"></span></p>
+      <p><span class="typed" data-typed-items="Utilizo JavaScript día a día., También uso React., Además manejo regularmente Angular."></span></p>
       <a href="./assets/pdf/Gianluca-Brunner-CV.pdf" download="Gianluca-Brunner-CV.pdf"><button class="btn btn-success btn-hero">Curriculum</button></a>
       <a target="_blank" href="https://www.linkedin.com/in/gianluca-brunner/"><button class="btn btn-success btn-hero">LinkedIn</button></a>
     </div>
@@ -90,16 +90,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Día de nacimiento:</strong> <span>21 de Agosto 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a class="linkedin-aboutme"target="_blank" href="https://www.linkedin.com/in/gianluca-brunner/"><span>Gianluca Brunner</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ubicación:</strong> <span>Entre Rios, Argentina (con posibilidad de relocalización)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+54 9 343 466 6524</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Correo:</strong> <span>gianbrunner1@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+54 9 343 466 6524</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Experiencia:</strong> <span>Trainee</span></li>
                 </ul>
               </div>
             </div>
@@ -114,7 +114,7 @@
                 entre programadores que luego me interesa publicar en mi perfil de LinkedIn,
                 como por ejemplo daily challenges.
             </p>
-            <button class="btn btn-success btn-hero">Descargar CV</button>
+            <a href="./assets/pdf/Gianluca-Brunner-CV.pdf" download="Gianluca-Brunner-CV.pdf"><button class="btn btn-success btn-hero">Descargar CV</button></a>
           </div>
         </div>
       </div>
@@ -285,7 +285,8 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <!-- I use formspree to make the contact form work -->
+            <form action="https://formspree.io/f/mknkolyn" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Nombre</label>
@@ -303,11 +304,6 @@
               <div class="form-group">
                 <label for="name">Mensaje</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Cargando</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Tu mensaje fue enviado. Gracias!</div>
               </div>
               <div class="text-center"><button class="btn btn-success btn-hero" type="submit">Enviar mensaje</button></div>
             </form>
@@ -327,7 +323,6 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
