--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Gianluca Brunner</h1>
-      <p>Soy desarrollador FrontEnd</span></p>
-      <p><span class="typed" data-typed-items="Utilizo JavaScript día a día., También uso React., Además manejo regularmente Angular."></span></p>
+      <p>Soy <span class="typed" data-typed-items="desarrollador FrontEnd"></span></p>
       <a href="./assets/pdf/Gianluca-Brunner-CV.pdf" download="Gianluca-Brunner-CV.pdf"><button class="btn btn-success btn-hero">Curriculum</button></a>
       <a target="_blank" href="https://www.linkedin.com/in/gianluca-brunner/"><button class="btn btn-success btn-hero">LinkedIn</button></a>
     </div>
