--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-picture.png" class="img-fluid" alt="">
+            <img src="assets/img/about-me.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a class="linkedin-aboutme"target="_blank" href="https://www.linkedin.com/in/gianluca-brunner/"><span>Gianluca Brunner</span></a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <a class="linkedin-aboutme" target="_blank" href="https://www.linkedin.com/in/gianluca-brunner/"><span>Gianluca Brunner</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ubicación:</strong> <span>Entre Rios, Argentina (con posibilidad de relocalización)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+54 9 343 466 6524</span></li>
                 </ul>
@@ -277,7 +277,7 @@
               <div class="phone">
                 <i class="bi bi-github"></i>
                 <h4>GitHub:</h4>
-                <a class="linkedin-aboutme" href="https://github.com/gianbr"><p>github.com/gianbr</p></a>
+                <a class="linkedin-aboutme" target="_blank" href="https://github.com/gianbr"><p>github.com/gianbr</p></a>
               </div>
             </div>
 
