Agregados 2 proyectos al portfolio, arreglos de diseño.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <div class="section-title">
           <h2>Sobre mi</h2>
           <p>Soy un desarrollador trainee autodidacta muy dedicado e interesado en el mundo de la programación, con compromiso y ganas
-            de involucrarme completamente en todas las tareas requeridas, apasionado por el cambio, la colaboración y la mejora continua.</p>
+            de involucrarme completamente en todas las tareas requeridas, apasionado por el cambio, la colaboración y la mejora continua.
+            Actualmente utilizo JavaScript, React, TypeScript y Angular para desarrollo y Sass, Bootstrap, Material-UI, TailwindCSS y Skeleton como
+            frameworks de desarrollo.</p>
         </div>
 
         <div class="row">
@@ -125,8 +127,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-        <p>Acá se pueden ver los proyectos que más relevantes, categorizados por un filtro según la tecnologia más usada</p>
-        <p class="portfolio-paragraph">Al poner el cursor encima, se encuentran como opciones una vista previa del proyecto y un enlace que lleva al detalle del mismo</p>
+        <p>Acá se pueden ver los proyectos que más relevantes, categorizados por un filtro según la tecnologia más usada.</p>
+        <p class="portfolio-paragraph">Al clickear, se encuentran como opciones una vista previa del proyecto y un enlace que lleva al detalle del mismo.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -152,22 +154,22 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
             <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-cart-cover.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./assets/img/portfolio/portfolio-cart.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="./portfolio-details/portfolio-cart-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
             <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-todo-cover.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./assets/img/portfolio/portfolio-todo2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="./portfolio-details/portfolio-todo-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
