Proyecto agregado, favicoin agregado, compresion de imagenes

--- a/portfolio-details/portfolio-quiz-details.html
+++ b/portfolio-details/portfolio-quiz-details.html
@@ -102,15 +102,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-cart.png" alt="">
+                  <img src="../assets/img/portfolio/portfolio-quiz1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-cart2.png" alt="">
+                  <img src="../assets/img/portfolio/portfolio-quiz2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-cart3.png" alt="">
+                    <img src="../assets/img/portfolio/portfolio-quiz4.png" alt="">
                 </div>
 
               </div>
@@ -122,17 +122,17 @@
             <div class="portfolio-info">
               <h3>Información del proyecto</h3>
               <ul>
-                <li><strong>Tecnologias</strong>: Vanilla JavaScript, Skeleton.</li>
-                <li><strong>Fecha</strong>: 24 de Abril, 2021</li>
-                <li><strong>Demostración en vivo</strong>: <a target="_blank" href="https://carrito-gianlucabrunner.netlify.app/">https://carrito-gianlucabrunner.netlify.app/</a></li>
-                <li><strong>Repositorio de GitHub</strong>: <a target="_blank" href="https://github.com/gianbr/Template-Carrito">https://github.com/gianbr/Template-Carrito</a></li>
+                <li><strong>Tecnologias</strong>: TypeScript, Angular, Boostrap.</li>
+                <li><strong>Fecha</strong>: 7 de Mayo, 2021</li>
+                <li><strong>Demostración en vivo</strong>: <a target="_blank" href="https://quiz-app-theta.vercel.app/dashboard">https://quiz-app-theta.vercel.app/dashboard</a></li>
+                <li><strong>Repositorio de GitHub</strong>: <a target="_blank" href="https://github.com/gianbr/QuizApp">https://github.com/gianbr/QuizApp</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>¿Qué es y para qué sirve este proyecto?</h2>
               <p>
-                Es una plantilla de lo que podría ser una tienda con un carrito de compras incluido, mostrando el funcionamiento del mismo.
-                Para hacerlo se utilizó vanilla JavaScript y Skeleton como librería de diseño.
+                Es una aplicación de preguntas y respuestas de caracter general. Una vez terminado el juego, muestra los resultados de todas las preguntas.
+                Para hacerla se utilizó TypeScript, Angular y Bootstrap como framework de diseño.
               </p>
             </div>
           </div>
