--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="57x57" href="./assets/img//apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./assets/img//apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./assets/img//apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./assets/img//apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./assets/img//apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./assets/img//apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./assets/img//apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./assets/img//apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/img//apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="./assets/img//android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/img//favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./assets/img//favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/img//favicon-16x16.png">
+  <link rel="manifest" href="./assets/img//manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./assets/img//ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- Google Fonts -->
+  <!-- Google Fonts --> 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -158,7 +173,7 @@
             <div class="portfolio-wrap">
               <img src="./assets/img/portfolio/portfolio-cart-cover.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/portfolio/portfolio-cart.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/portfolio/portfolio-cart.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Plantilla funcional de carrito"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio-details/portfolio-cart-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -168,18 +183,18 @@
             <div class="portfolio-wrap">
               <img src="./assets/img/portfolio/portfolio-todo-cover.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/portfolio/portfolio-todo2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/portfolio/portfolio-todo2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="To-do App"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio-details/portfolio-todo-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
             <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-quiz-cover.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./assets/img/portfolio/portfolio-quiz1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quiz App"><i class="bx bx-plus"></i></a>
+                <a href="./portfolio-details/portfolio-quiz-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
