--- a/portfolio-details/portfolio-todo-details.html
+++ b/portfolio-details/portfolio-todo-details.html
@@ -69,6 +69,14 @@
             <li><a href="../index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre mi</span></a></li>
             <li><a href="../index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
             <li><a href="../index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacto</span></a></li>
+            <div class="theme-switch-wrapper darkmode-switch">
+                <i class="bi bi-moon moon"></i>
+                <em>Modo Oscuro</em>
+                <label class="theme-switch" for="checkbox">
+                    <input type="checkbox" id="checkbox" />
+                    <div class="slider round"></div>
+                </label>
+              </div>
           </ul>
       </nav><!-- .nav-menu -->
     </div>
