--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Gianluca Brunner</h1>
       <p>Soy <span class="typed" data-typed-items="desarrollador FrontEnd, Freelancer"></span></p>
-      <a href="./assets/pdf/Gianluca-Brunner-CV.pdf" download="Gianluca-Brunner-CV.pdf"><button class="btn btn-success btn-hero">Curriculum</button></a>
+      <a href="https://drive.google.com/file/d/1em9aR9d3_Tg5QIavwoKojRRFQg36EeHe/view?usp=sharing" target="_blank"><button class="btn btn-success btn-hero">Curriculum</button></a>
       <a target="_blank" href="https://www.linkedin.com/in/gianluca-brunner/"><button class="btn btn-success btn-hero">LinkedIn</button></a>
     </div>
   </section><!-- End Hero -->
@@ -113,7 +113,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Sobre mi <i class="bi bi-translate"></i></h2>
+          <h2>Sobre mi</h2>
             <p>Soy un desarrollador trainee autodidacta, dedicado e interesado en el mundo de la programación, con compromiso y
             ganas de involucrarme completamente en todas las tareas requeridas.
             Actualmente, utilizo JavaScript y React para desarrollo; me encuentro estudiando TypeScript y Angular; uso Sass como
@@ -146,7 +146,7 @@
                 conocimientos adquiridos que he utilizado en proyectos propios, los cuales pueden ser observados en la sección de
                 portfolio.
             </p>
-            <a href="./assets/pdf/Gianluca-Brunner-CV.pdf" download="Gianluca-Brunner-CV.pdf"><button class="btn btn-success btn-hero">Descargar CV</button></a>
+            <a href="https://drive.google.com/file/d/1em9aR9d3_Tg5QIavwoKojRRFQg36EeHe/view?usp=sharing" target="_blank"><button class="btn btn-success btn-hero">Ver CV</button></a>
           </div>
         </div>
       </div>
