--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.css" integrity="sha512-ksbpl5EUb4HLEKUNItsPMT/Ih6KcISE53GbYOu3xFUVYvTSSX5AJxTI2aigdQm9uNSkSsRMHsSGNKppkt691lw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -54,7 +54,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/Webp.net-resizeimage.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-picture.webp" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Gianluca Brunner</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/gianbr" target="_blank" class="twitter"><i class="bx bxl-github"></i></a>
@@ -78,17 +78,6 @@
                 <div class="slider round"></div>
             </label>
           </div>
-          <!-- <div class="theme-switch-wrapper darkmode-switch">
-            <svg xmlns="http://www.w3.org/2000/svg" width="34" height="26" fill="currentColor" class="bi bi-translate moon" viewBox="0 0 16 16">
-                <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"/>
-                <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"/>
-              </svg>
-            <em id="text-lang">Modo inglés</em>
-            <label class="theme-switch" for="checkbox-lang">
-                <input type="checkbox" id="checkbox-lang" language='spanish'/>
-                <div class="slider round"></div>
-            </label>
-          </div> -->
         </ul>
       </nav><!-- .nav-menu -->
       
@@ -122,7 +111,7 @@
 
         <div class="row">
           <div class="col-lg-4 about-profile" data-aos="fade-right">
-            <img src="assets/img/about-me.jpg" class="img-fluid" id="about-profile-pic" alt="">
+            <img src="assets/img/about-me.webp" class="img-fluid" id="about-profile-pic" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <div class="row">
@@ -177,9 +166,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-react">
             <div class="portfolio-wrap">
-              <img src="./assets/img/portfolio/portfolio-quotes-cover.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-quotes-cover.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/portfolio/portfolio-quotes3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quotes App"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/portfolio/portfolio-quotes3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quotes App"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio-details/portfolio-quotes-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -187,9 +176,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
             <div class="portfolio-wrap">
-              <img src="./assets/img/portfolio/portfolio-cart-cover.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-cart-cover.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/portfolio/portfolio-cart.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Plantilla funcional de carrito"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/portfolio/portfolio-cart.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Plantilla funcional de carrito"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio-details/portfolio-cart-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -197,9 +186,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
             <div class="portfolio-wrap">
-              <img src="./assets/img/portfolio/portfolio-todo-cover.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-todo-cover.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/portfolio/portfolio-todo2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="To-do App"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/portfolio/portfolio-todo2.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="To-do App"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio-details/portfolio-todo-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -207,9 +196,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-angular">
             <div class="portfolio-wrap">
-              <img src="./assets/img/portfolio/portfolio-quiz-cover.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-quiz-cover.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="./assets/img/portfolio/portfolio-quiz1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quiz App"><i class="bx bx-plus"></i></a>
+                <a href="./assets/img/portfolio/portfolio-quiz1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Quiz App"><i class="bx bx-plus"></i></a>
                 <a href="./portfolio-details/portfolio-quiz-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -234,38 +223,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End Portfolio Section -->
@@ -348,22 +305,17 @@
 
   </main><!-- End #main -->
 
-    <!-- <footer id="footer">
-        <div class="container">
-            
-        </div>
-    </footer> -->
-
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   
   <!-- Vendor JS Files -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.0.2/aos.js" integrity="sha512-678bHRnILWQudsPcjDbSoYtwimEk8yPq7BBWeJaFoSHPf7Ob7N7au8M49yY9Wbpmmi0PvDzf3Rca1mbmYQLAxQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
-  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js" integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
