Proyecto agregado, eliminación archivos y comentarios innecesarios

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts --> 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -59,7 +58,7 @@
         <h1 class="text-light"><a href="index.html">Gianluca Brunner</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/gianbr" target="_blank" class="twitter"><i class="bx bxl-github"></i></a>
-          <a href="mailto:gianbrunner1@gmail.com?Subject=subject message" target="_blank" class="instagram"><i class='bx bx-mail-send' ></i></a>
+          <a href="mailto:gianbrunner1@gmail.com" class="instagram"><i class='bx bx-mail-send' ></i></a>
           <a href="https://www.linkedin.com/in/gianluca-brunner/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -205,12 +204,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
             <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-portfolio-cover.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./assets/img/portfolio/portfolio-portfolio.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Portfolio"><i class="bx bx-plus"></i></a>
+                <a href="./portfolio-details/portfolio-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
