--- a/portfolio-details/portfolio-portfolio-details.html
+++ b/portfolio-details/portfolio-portfolio-details.html
@@ -110,11 +110,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-cart.webp" alt="">
+                  <img src="../assets/img/portfolio/portfolio-portfolio.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-cart2.webp" alt="">
+                  <img src="../assets/img/portfolio/portfolio-portfolio2.webp" alt="">
                 </div>
 
               </div>
@@ -126,17 +126,15 @@
             <div class="portfolio-info">
               <h3>Información del proyecto</h3>
               <ul>
-                <li><strong>Tecnologias</strong>: Vanilla JavaScript, Skeleton.</li>
-                <li><strong>Fecha</strong>: 24 de Abril, 2021</li>
-                <li><strong>Demostración en vivo</strong>: <a target="_blank" href="https://carrito-gianlucabrunner.netlify.app/">https://carrito-gianlucabrunner.netlify.app/</a></li>
-                <li><strong>Repositorio de GitHub</strong>: <a target="_blank" href="https://github.com/gianbr/Template-Carrito">https://github.com/gianbr/Template-Carrito</a></li>
+                <li><strong>Tecnologias</strong>: Vanilla JavaScript, Animate on Scroll, Glightbox, Typed, Bootstrap.</li>
+                <li><strong>Fecha</strong>: En progreso</li>
+                <li><strong>Repositorio de GitHub</strong>: <a target="_blank" href="https://github.com/gianbr/Portfolio-GB">https://github.com/gianbr/Portfolio-GB</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>¿Qué es y para qué sirve este proyecto?</h2>
               <p>
-                Es una plantilla de lo que podría ser una tienda con un carrito de compras incluido, mostrando el funcionamiento del mismo.
-                Para hacerlo se utilizó vanilla JavaScript y Skeleton como librería de diseño.
+                Es la web que utilizo como portfolio. Sirve para mostrar más de mi y mis proyectos y/o trabajos. También es útil como modelo para proyectos Freelance.
               </p>
             </div>
           </div>
@@ -155,7 +153,6 @@
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
   <script src="../assets/vendor/purecounter/purecounter.js"></script>
   <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="../assets/vendor/typed.js/typed.min.js"></script>
