--- a/portfolio-details/portfolio-quotes-details.html
+++ b/portfolio-details/portfolio-quotes-details.html
@@ -54,7 +54,7 @@
     <div class="d-flex flex-column">
 
         <div class="profile">
-            <img src="../assets/img/profile-picture.jpg" alt="" class="img-fluid rounded-circle">
+            <img src="../assets/img/profile-picture.webp" alt="" class="img-fluid rounded-circle">
             <h1 class="text-light"><a href="../index.html">Gianluca Brunner</a></h1>
             <div class="social-links mt-3 text-center">
               <a href="#" class="twitter"><i class="bx bxl-github"></i></a>
@@ -110,11 +110,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-quotes.jpg" alt="">
+                  <img src="../assets/img/portfolio/portfolio-quotes.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/portfolio-quotes2.jpg" alt="">
+                  <img src="../assets/img/portfolio/portfolio-quotes2.webp" alt="">
                 </div>
 
               </div>
