--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-react">
             <div class="portfolio-wrap">
-              <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="">
+              <img src="./assets/img/portfolio/portfolio-recipes-cover.webp" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/800x600.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./assets/img/portfolio/portfolio-recipes1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recipes App"><i class="bx bx-plus"></i></a>
+                <a href="./portfolio-details/portfolio-recipes-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
